syntax = "proto3";

package broker;

import "mdts/protocols/brokermsg/brokermsg.proto";

service S2TBroker {

  // Request: service -> dts -> broker -> dts -> third
  rpc TransforDataToThird(brokermsg.ParamToThird) returns (brokermsg.ResultToThird) {}
  // Response: service <- dts <- broker <- dts <- third
  rpc TransforDataFromThird(brokermsg.ParamFromThird) returns (brokermsg.ResultFromThird) {}
}
